--- a/src/pages/request-quote.astro
+++ b/src/pages/request-quote.astro
@@ -28,8 +28,10 @@ const {Subject, FullName, Email, Phone, CompanyName, ProductType, Quantity, File
 ---
 
 <Layout>
+   <div class="background-form">
     <div class="forms-page-wrapper">
       <Hero {requestquoteHeader} {requestquoteText} {requestquotePhone} {requestquoteEmail}  />
       <RequestQuoteForm {Subject} {FullName} {Email} {Phone} {CompanyName} {ProductType} {Quantity} {FileUpload} {AdditionalDetails} {requestquoteBtn} />
     </div>
+   </div>
 </Layout>
