--- a/src/components/RequestQuote/Hero.astro
+++ b/src/components/RequestQuote/Hero.astro
@@ -8,7 +8,7 @@ const {requestquoteHeader, requestquoteText, requestquotePhone, requestquoteEmai
     <div class="contact-info-card">
         
         <div class="hero-grid">
-            <div class="form-h1">
+            <div class="form-h1  h1-grid">
                 <h1>{requestquoteHeader}</h1>
             </div>
             <div class="contact-card">
