--- a/src/components/Services/ServicesTypes.astro
+++ b/src/components/Services/ServicesTypes.astro
@@ -17,7 +17,7 @@ import "../../styles/styles.scss";
 ---
 
 <div class="service">
-    <section>
+    <section class="portal">
         <div>
             <h2>{servicePortalTitle}</h2>
             <p>{servicePortalDesc}</p>
@@ -31,7 +31,7 @@ import "../../styles/styles.scss";
         </div>
         <img src={servicePoofingImage} alt={servicePoofingAltText}>
     </section>
-    <section>
+    <section class="warehouse">
         <div>
             <h2>{serviceWarehouseTitle}</h2>
             <p>{serviceWarehouseDesc}</p>
