--- a/src/styles/_service-about-pages.scss
+++ b/src/styles/_service-about-pages.scss
@@ -1,6 +1,7 @@
 @use 'colours' as *;
 @use 'mixins' as *;
 
+
 //Online Services Page Styles
 .service-hero {
     @include white-card;
@@ -14,6 +15,18 @@
         color: $primary-blue;
         margin-top: 1rem
     }
+
+    img {
+        display: block;
+        width: calc(100% + 2rem);
+        /* 2rem left + 2rem right */
+        max-width: none;
+        /* allow overflow beyond container */
+        margin-left: -1rem;
+        /* negative half the added width */
+        margin-right: -1rem;
+    }
+
 
     .service-btn {
         @include btn ($secondary-yellow, $tertiary-dark-blue, #FFEDAD);
@@ -37,6 +50,10 @@
         padding: 1rem;
         max-width: 700px;
         margin: 0 auto;
+
+        img {
+            border-radius: 12px
+        }
     }
 }
 
@@ -100,6 +117,15 @@
 @media (min-width: 1000px) {
 
     //Online Services
+    .banner {
+        background-image: url("https://stylish-dinosaurs-39d17e40aa.media.strapiapp.com/poster_printing_banner_650b9eb00a.webp");
+        background-size: cover;
+        background-position: center;
+        padding: 1rem;
+        max-width: 1920px;
+        margin: 0 auto;
+    }
+
     .service-hero {
         padding: 0 2rem 2rem 2rem;
         max-width: unset;
@@ -118,13 +144,26 @@
 
     .service {
         margin: 9rem 0;
+        gap: 4rem;
+
+        .portal {
+            padding-top: 5rem;
+        }
+
+        .warehouse {
+            padding-bottom: 5rem;
+        }
 
         section {
             max-width: 1234px;
             flex-direction: row;
             align-items: center;
+            padding: 0 1rem;
             gap: 20px;
 
+            img {
+                max-width: 50%;
+            }
         }
     }
 
@@ -164,4 +203,4 @@
 
     }
 
-} 
+}
