Added about us banner

--- a/src/components/Services/Hero.astro
+++ b/src/components/Services/Hero.astro
@@ -3,7 +3,7 @@ const {serviceHeroHeader, serviceHeroDesc, serviceHeroBtn, serviceHeroImage, ser
 import "../../styles/styles.scss";
 ---
 
-<div class="banner">
+<div class="service-banner">
     <div class="service-hero">
         <h1>{serviceHeroHeader}</h1>
         <img src={serviceHeroImage} alt={servicesAltText}>
