--- a/src/components/AboutUs/Hero.astro
+++ b/src/components/AboutUs/Hero.astro
@@ -3,13 +3,15 @@ const {aboutUsHeroHeader, aboutUsHeroDesc, aboutUsHeroImg, aboutUsAltText, smart
 import "../../styles/styles.scss";
 ---
 
-<div class="about-hero">
-    <h1>{aboutUsHeroHeader}</h1>
-    <img src={aboutUsHeroImg} alt={aboutUsAltText}>
-    <div class="hero-tag">
-        <p>{smartPrintingText}</p>
-        <p>{trustedExpertiseText}</p>
-        <p>{canadianBasedText}</p>
+<div class="about-banner">
+    <div class="about-hero">
+        <h1>{aboutUsHeroHeader}</h1>
+        <img src={aboutUsHeroImg} alt={aboutUsAltText}>
+        <div class="hero-tag">
+            <p>{smartPrintingText}</p>
+            <p>{trustedExpertiseText}</p>
+            <p>{canadianBasedText}</p>
+        </div>
+        <p>{aboutUsHeroDesc}</p>
     </div>
-    <p>{aboutUsHeroDesc}</p>
 </div>
