added another media query to forms page

--- a/src/pages/request-quote.astro
+++ b/src/pages/request-quote.astro
@@ -28,6 +28,9 @@ const {Subject, FullName, Email, Phone, CompanyName, ProductType, Quantity, File
 ---
 
 <Layout>
+  <div class="white-space">
+
+  </div>
    <div class="background-form">
     <div class="forms-page-wrapper">
       <Hero {requestquoteHeader} {requestquoteText} {requestquotePhone} {requestquoteEmail}  />
