--- a/src/styles/_form-pages.scss
+++ b/src/styles/_form-pages.scss
@@ -52,6 +52,7 @@
         width: 100%;
         height: 55px;
         margin-bottom: 1rem;
+        border-radius: 4px;
 
     }
 }
@@ -60,6 +61,7 @@
 label{
     
     font-weight: bold;
+    text-transform: uppercase;
 }
 
 input::placeholder,
@@ -69,10 +71,12 @@ option{
     font-weight: 400;
     font-size: 16px;
     color: $grey;
+    padding: 0.5rem;
 }
 .message-box{
     height: 256px;
     width: 100%;
+    border-radius: 4px;
    
 }
 .product-type-quantity{
@@ -89,6 +93,74 @@ option{
   display: inline-block;
   margin-top: 32px;
   width: 100%;
+}
+
+
+@media (min-width: 750px){
+
+
+   
+    .hero-grid{
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        align-items: start;
+    }
+    .h1-grid{
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        gap: 1rem;
+    }
+
+    .form-h1{
+        grid-column: 1 / span 12;
+        left: 0;
+        border-radius: 0 15px 15px 0;
+        
+        
+    }
+    .form-h1 h1{
+        grid-column: 3/ span 6;
+        
+    }
+    .contact-card{
+        grid-column: 3/ span 12;
+        padding: 2rem 1rem 1rem 1rem;
+        border-radius: 0 0 15px 15px;
+        margin-top: -1rem;
+    }
+   
+   
+
+    .forms-page-wrapper{
+
+          margin-bottom: 144px;
+          gap: 1rem;
+          display:grid;
+          grid-template-columns: repeat(12, 1fr);
+          align-items: start;
+          
+      }
+    
+    .forms-page-wrapper > :first-child{
+        grid-column: 1 / span 5;
+
+    
+    }
+    .background-form{
+        background-color: $tertiary-dark-blue;
+        margin-top: 2rem;
+        
+    }
+    
+
+    .form-card{
+        grid-column: 7/ span 6;
+        margin-top: 72px;
+        box-shadow: none;
+    }
+   
+
+
 }
 
 //desktop layout
@@ -110,6 +182,7 @@ option{
         grid-column: 1 / span 12;
         left: 0;
         border-radius: 0 15px 15px 0;
+        
         
     }
     .form-h1 h1{
@@ -143,11 +216,13 @@ option{
     .background-form{
         background-color: $tertiary-dark-blue;
         margin-top: 2rem;
+        
     }
+    
 
     .form-card{
         grid-column: 7/ span 4;
-        margin-top: 144px;
+        margin-top: 72px;
         box-shadow: none;
     }
 
