--- a/src/components/LinerlessLabel/SustainableLabel.astro
+++ b/src/components/LinerlessLabel/SustainableLabel.astro
@@ -4,7 +4,9 @@ import "../../styles/styles.scss";
 ---
 
 <div class="featured-products-additional-info">
-    <h2 class="featured-products-header">{sustainableTitle}</h2>
+    <div class="featured-products-header">
+        <h2>{sustainableTitle}</h2>
+    </div>
     <div class="featured-products-infolist">
         <p>{keyadvantagesTitle}</p>
         <ul>
