--- a/src/styles/_colours.scss
+++ b/src/styles/_colours.scss
@@ -2,6 +2,7 @@
 $primary-blue: #0F72DA;
 $secondary-yellow: #F7CE41;
 $tertiary-dark-blue: #124D80;
+$btn-hover-blue: #A0D3FF;
 $white: #FFFFFF;
 $black: #000;
 $grey: #939393;
