--- a/src/pages/linerless-labels.astro
+++ b/src/pages/linerless-labels.astro
@@ -25,12 +25,16 @@ const heroData = pageData.find(pd => pd.__component === "linerlesslabelhero.line
 const {linerlesslabelHeader, linerlesslabelText} = heroData;
 
 
-const { linerlessImage: {
-	url: linerlessImage
+const { linerlessImageMobile: {
+	url: linerlessImageMobile
 }} = heroData;
 
-const { linerlessImage: {
-	alternativeText: linerlessAltText
+const { linerlessImageDesktop: {
+	url: linerlessImageDesktop
+}} = heroData;
+
+const { linerlessImageMobile: {
+	alternativeText: linerlessAltTextMobile
 }} = heroData;
 
 //fetch linerlessWhatIs components
@@ -82,7 +86,7 @@ const { sustainableImage: {
 ---
 
 <Layout>
-    <Hero {linerlesslabelHeader} {linerlesslabelText} {linerlessImage} {linerlessAltText} />
+    <Hero {linerlesslabelHeader} {linerlesslabelText} {linerlessImageMobile} {linerlessAltTextMobile} {linerlessImageDesktop} />
     <WhatIs {linerlesslabelWhatIsTitle} {linerlesslabelWhatIsDesc} {perfectforwindowText} {printedmanufactureText} 
     {linerlesslabelImage1} {linerlesslabelImage2} {linerlesslabelImage3}
     {linerlesslabelAltText1} {linerlesslabelAltText2} {linerlesslabelAltText3}/>
