--- a/src/styles/_featured-products.scss
+++ b/src/styles/_featured-products.scss
@@ -15,7 +15,7 @@
 
 .featured-products-container {
     background-color: $primary-blue;
-    padding: 16px
+    padding: 48px 0;
 }
 
 // WHAT ARE... SECTION
@@ -35,7 +35,11 @@
     margin-top: 16px;
     display: flex;
     gap: 16px;
-    flex-wrap: wrap
+    flex-wrap: wrap;
+}
+
+.linerless-img img {
+    border-radius: 12px;
 }
 
 
@@ -90,7 +94,7 @@
 }
 
 .featured-products-btn {
-    @include btn ($white, $tertiary-dark-blue, #FFEDAD);
+    @include btn ($white, $tertiary-dark-blue, $btn-hover-blue);
     display: inline-block;
     width: 100%;
     margin-top: 16px;
@@ -100,25 +104,35 @@
     margin-bottom: 96px;
 }
 
+// *** MEDIA QUERY ***
+
+@media (min-width: 750px) {
+    .linerless-img img:nth-child(1),
+    .linerless-img img:nth-child(2){
+        width: 188px;
+    }
+}
+
 
 @media (min-width: 1000px) {
     .featured-products-hero {
+        width: 950px; 
         display: flex;
         justify-content: space-evenly;
         padding: 4rem;
         margin-top: 2rem;
-        width: 1400px; 
         margin-left: auto;      
     }
 
     .product-hero-container {
-        max-width: 600px;
+        width: 600px;
+        padding-top: 3rem;
     }
 
     .featured-products-container {
         display: flex;
+        gap: 50px;
         justify-content: center;
-        gap: 90px;
     }
 
     .featured-products-info {
@@ -129,38 +143,21 @@
     }
 
     .linerless-img {
-        display: block;
-        align-items: flex-start;
-    }
-    
-    .linerless-img img:nth-child(1) {
-        width: 100%;
-        position: relative;
-        top: 5rem;
-    }
-
-    .linerless-img img:nth-child(2) {
-        width: 100%;
-        position: relative;
-        left: 20rem;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
     }
 
     .linerless-img img:nth-child(3) {
-        width: 100%;
-        position: relative;
-        bottom: 3.5rem;
+        max-width: 238px;
     }
 
     .featured-products-container {
         padding-right: 15rem;
     }
 
-    .featured-products-header {
-        max-width: 1000px;
-    }
-
     .featured-products-infolist {
-        width: 1300px;       
+        width: 950px;       
         margin-left: auto;
         margin-right: auto; 
         padding: 50px 150px;
@@ -173,5 +170,76 @@
 
     .featured-products-btn {
         display: inline;
+    }
+    .featured-products-hero {
+        @include products-hero-card-desktop($tertiary-dark-blue);
+        padding: 32px 16px;
+    }
+
+}
+
+@media (min-width: 1200px) {
+    .linerless-img {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .featured-products-container {
+        gap: 90px;
+        padding-right: 0;
+    }
+
+}
+
+@media (min-width: 1400px) {
+
+    .linerless-hero-img {
+        width: 600px;
+        height: 366px;
+    }
+
+    .integratedform-hero-img {
+        width: 606px;
+        height: 366px; 
+    }
+
+    .pressureseal-hero-img {
+        width: 606px;
+        height: 356px;      
+    }
+    
+    .featured-products-hero {
+        width: 1400px;    
+    }
+    
+    .featured-products-infolist {
+        width: 1200px;       
+    }
+
+    .linerless-img img:nth-child(1) {
+        position: relative;
+        top: 5rem;
+    }
+
+    .linerless-img img:nth-child(2) {
+        position: relative;
+        left: 14rem;
+        top: 3rem;
+    }
+    
+    .featured-products-header {
+        @include yellow-header-products-desktop;
+    }
+}
+
+@media (min-width: 1600px) {
+     .featured-products-hero {
+        width: 1600px;    
+    }
+}
+
+@media (min-width: 1800px) {
+     .featured-products-hero {
+        width: 1800px;    
     }
 }
