fixed forms pages svgs, spacing, touched up some styling

--- a/src/components/ContactUs/ContactUsForm.astro
+++ b/src/components/ContactUs/ContactUsForm.astro
@@ -11,7 +11,7 @@ const {
 
 <div class="form-card">
     <!-- Add https://formsubmit.co/email-here later in the action -->
-     <div>
+     <div class="form-p">
         <p>Input fields that are marked with * are required. </p>
      </div>
     <form
