--- a/src/styles/_form-pages.scss
+++ b/src/styles/_form-pages.scss
@@ -15,15 +15,14 @@
     left: -20px;
     max-width: 793px;
 }
-h1{
+.form-h1 h1{
     padding-left: 1rem;
 }
-h2{
+.contact-group h2{
     font-family: 'assistant';
     font-size: 22px;
     padding: 1rem 0 0 1rem;
     
-
 }
 .form-svg{
     width: 30px;
