Fixed Nav and footer including logos

--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -13,7 +13,7 @@ import "../styles/styles.scss";
   <div class="container">
     <div class="nav-container">
       <a href="/"
-        ><img src="/assets/printed-logo-nav.png" alt="Logo image for Print|ED." /></a
+        ><img src="https://stylish-dinosaurs-39d17e40aa.media.strapiapp.com/printed_logo_daa3b7d310.png" alt="The dark logo for Print|ED." /></a
       >
       <button class="toggle-nav">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
