--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,7 +3,7 @@
 
 header {
     font-family: "Assistant", sans-serif;
-    position: absolute;
+    position: relative;
     top: 0;
     width: 100%;
     box-shadow: 0 4px 8px 0 rgba(143, 143, 143, 0.25);
@@ -86,10 +86,6 @@ header {
     }
 }
 
-main {
-    margin-top: 130px;
-}
-
 @media (min-width: 320px) {
     .request {
         display: none;
@@ -121,7 +117,6 @@ main {
 
             img {
                 width: 220px;
-                padding: 20px 0 20px 0;
             }
 
             .request {
