added styling to 404 page

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,7 +3,9 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-  <h1>404</h1>
-  <p>Oops! Page could not be found.</p>
-  <a href="/"> Back to Home </a>
+  <div class="container-four">
+    <h1 class="h1-four">404</h1>
+    <p>Oops! Page could not be found.</p>
+    <a href="/" class="btn-four"> Back to Home </a>
+  </div>
 </Layout>
