--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1077,4 +1077,57 @@ option {
   .featured-products-hero {
     width: 1800px;
   }
+}
+.container-four {
+  background-color: #124D80;
+  justify-self: center;
+  padding: 2rem;
+  margin: 96px 0 96px 0;
+  border-radius: 15px;
+}
+
+.container-four h1, .container-four p {
+  color: #FFFFFF;
+}
+
+.container-four h1 {
+  font-size: 122px;
+}
+
+.container-four p {
+  font-weight: bold;
+}
+
+.btn-four {
+  font-weight: bold;
+  background-color: #F7CE41;
+  color: #124D80;
+  border-radius: 6px;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+  padding: 1rem;
+  font-size: 20px;
+  transition: background-color 0.3s ease;
+  display: inline-block;
+  margin-top: 32px;
+  width: 100%;
+}
+.btn-four:hover {
+  background-color: #FFEDAD;
+}
+
+@media (min-width: 1000px) {
+  .container-four h1 {
+    font-size: 250px;
+    justify-self: center;
+  }
+  .container-four {
+    padding: 2rem 7rem;
+    margin: 144px 0 144px 0;
+  }
+  .container-four p {
+    justify-self: center;
+    font-size: 44px;
+  }
 }/*# sourceMappingURL=styles.css.map */
